updated css to try to correct layout issue on in firefox mac that stems from using different font

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1452,6 +1452,7 @@ div#nav-container {
 	padding-left:5px;
 	background:#2B3240 none repeat scroll 0 0;
 	font-size:18px;
+	line-height:19px;
 }
 
 /** test **/
